--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <!--adding items to bottom navigation bar-->
-    <item android:id="@+id/nav_home"
+    <item android:id="@+id/home"
         android:title="Home"
         android:icon="@drawable/ic_home_black"/>
-    <item android:id="@+id/nav_stats"
+    <item android:id="@+id/stat"
         android:title="Stats"
         android:icon="@drawable/ic_stats_black"/>
 </menu>
