--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,7 @@
 
     </style>
 
+    <style name="myNavigationDrawerStyle" >
+        <item name="android:textSize">16sp</item>
+    </style>
 </resources>
