4,5,6 - Done! #AN_Done

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,8 +52,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="5dp"
-        android:alpha="?attr/actionBarSize"
-        android:background="?android:attr/windowBackground"
+        android:alpha="@android:integer/config_mediumAnimTime"
+        android:background="@color/colorWhite"
         android:theme="@style/myNavigationDrawerStyle"
 
         app:itemIconTint="@color/colorBlack"
