--- a/app/src/main/res/drawable/shape_circle3.xml
+++ b/app/src/main/res/drawable/shape_circle3.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/colorGreen"/>
+    <solid android:color="#009688"/>
 
 </shape>
