--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -201,4 +201,40 @@
 
   </LinearLayout>
 
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="65dp"
+      android:layout_marginBottom="8dp"
+      android:background="@drawable/shape_rect"
+      android:gravity="center"
+      android:orientation="horizontal"
+      android:padding="8dp">
+
+
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/shape_circle3"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:textColor="@color/colorBlack"
+        android:textSize="16sp"
+        android:text="New Recovered"/>
+
+    <TextView
+        android:id="@+id/newRecoveredTv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="-"
+        android:textSize="16sp"
+        android:textColor="@color/colorBlack"
+        android:textAlignment="textEnd"/>
+
+  </LinearLayout>
+
 </LinearLayout>
